navernoe end